--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "crypto-js": "^4.1.1",
     "firebase": "^9.8.3",
     "js-cookie": "^3.0.1",
+    "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "secure-ls": "^1.2.6",
     "vue": "^3.2.36",
